# python-geotiepoints

./: .bumpversion.cfg  .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .stickler.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  MANIFEST.in  README.md  README.rst  RELEASING.md  appveyor.yml  changelog.rst  cython_test.pyx  cython_test2.pyx  genindex.html  geo_interpolator.py  index.html  interpolator.py  mytest_fillborders.py  mytest_modis5to1.py  objects.inv  pyproject.toml  requirements.txt  rtd_requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: ci.yaml  deploy.yaml
continuous_integration/: build-manylinux-wheels.sh  environment.yaml
doc/: Makefile
doc/source/: conf.py  index.rst
geo_interpolator/: __init__.py
geotiepoints/: __init__.py  _modis_interpolator.pyx  _modis_utils.pxd  _modis_utils.pyx  _simple_modis_interpolator.pyx  basic_interpolator.py  geointerpolator.py  interpolator.py  modisinterpolator.py  multilinear.py  multilinear_cython.c  multilinear_cython.pyx  simple_modis_interpolator.py  version.py  viiinterpolator.py
geotiepoints/tests/: __init__.py  test_geointerpolator.py  test_interpolator.py  test_modis.py  test_modisinterpolator.py  test_multilinear.py  (+4 more)
sources/: index.txt
testdata/: 250m_lonlat_section_input.h5  250m_lonlat_section_input.npz  250m_lonlat_section_result.h5  create_modis_test_data.py  modis_test_data.h5  test_5_to_1_geoloc_5km.h5  test_5_to_1_geoloc_full.h5
tests/: test_geointerpolator.py  test_interpolator.py  test_modis.py  test_multilinear.py  test_satelliteinterpolator.py
